# display-dimmer

./: .gitignore  LICENSE  README.md
firmware-pico-poc/: main.py
firmware-platformio/: README.md  platformio.ini
firmware-platformio/src/: main.cpp
firmware-rust/: .gitignore  Cargo.toml
firmware-rust/src/: main.rs
pcb/: .gitignore
pcb/display-dimmer/: .gitignore  README.md  display-dimmer.kicad_pcb  display-dimmer.kicad_pro  display-dimmer.kicad_sch
