[package]
name = "ddc-control-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "1.0.0"
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", rev = "3ccf0c8", features = [
        "ch32v003f4u6",
        "memory-x",
        "embassy",
        "time-driver-any",
        "rt",
    ] }
embassy-executor = { version = "0.6.0", features = [
    "integrated-timers",
    "arch-spin",
    "executor-thread",
    "task-arena-size-128", # or better use nightly, but fails on recent Rust versions
] }
embassy-time = { version = "0.3.2" }

qingke = "*"
qingke-rt = "*"

once_cell = {version = "1.20.2", default-features = false}

[profile.dev]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
incremental = false
codegen-units = 1

# 0: no optimizations
# 1: basic optimizations
# 2: some optimizations
# 3: all optimizations
# "s": optimize for binary size
# "z": optimize for binary size, but also turn off loop vectorization.
opt-level = "s"
